<resources>
    <string name="app_name">PartyShare</string>

    <string name="log_in">Log In</string>
    <string name="resetPassword">Forgot your password ?</string>
    <string name="resetPage">Reset Password</string>
    <string name="resetbyEmail">Send My New Password</string>
    <string name="resetEmail">Password send to your email</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="account_deleted">Account Deleted</string>

    <string name="name">Name : </string>
    <string name="surname">Surname : </string>
    <string name="pseudo">Username :</string>
    <string name="email" translatable="false">Email : </string>
    <string name="password">Password : </string>

    <string name="welcome">Perfect ! You are now register on our app</string>
    <string name="wrongEmail">You have not entered a good email</string>
    <string name="notName">You need to enter a name</string>
    <string name="notSurname">You need to enter a surname</string>
    <string name="notPseudo">You need to enter an username</string>
    <string name="notEmail">You need to enter a email</string>
    <string name="notPassword">You need to enter a password</string>
    <string name="notInfo">You need to fill all the fields</string>
    <string name="emailSent">Verification Email has been sent</string>
    <string name="notVerified">Email Not Verified !</string>
    <string name="verifyNow">VERIFY NOW</string>
    <string name="error_log_in">Wrong email or Password</string>
    <string name="already_register">You are already registered</string>

    <string name="welcomeMessage">So nice to see you again !!</string>
    <string name="welcomeUser">Welcome </string>


    <string name="activities">Activities</string>
    <string name="myActivities"><u>My Activities</u></string>
    <string name="createAct">Create a new Activity</string>
    <string name="dialogue_message_activity">"What do you want to do?  "</string>
    <string name="delete_answer">Delete</string>
    <string name="see_answer">See</string>
    <string name="update_answer">Update</string>

    <string name="contact" translatable="false">Contacts</string>
    <string name="myContacts"><u>My Contacts</u></string>
    <string name="AddCont">Add a new Contact</string>
    <string name="add">Add</string>
    <string name="alreadyContact">You already has this contact, you can\'t add it again</string>
    <string name="dialogue_message">Do you want to delete this contact?</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>

    <string name="extraShow">Your extra items</string>
    <string name="extraFood">You can add here some extra foods (name : quantity \'enter\')</string>
    <string name="extraDrink">You can add here some extra drinks (name : quantity \'enter\')</string>
    <string name="createTitle"><u>Create your new activity</u></string>
    <string name="nameChoice">Choose a name : </string>
    <string name="next">Next</string>
    <string name="drink">Choose your Drinks</string>
    <string name="food">Choose your Foods</string>
    <string name="friends">Choose your Friends</string>
    <string name="location">Choose the location</string>
    <string name="date">Choose a date</string>


    <string name="dates" translatable="false">Date</string>
    <string name="dateActual">Actual Date</string>
    <string name="date_inserted">Date Inserted</string>


    <string name="validateBtn">Validate</string>
    <string name="coca" translatable="false">Coca</string>
    <string name="icetea" translatable="false">Ice Tea</string>
    <string name="sprite" translatable="false">Sprite</string>
    <string name="sevenUp" translatable="false">Seven Up</string>
    <string name="beer">Beer</string>
    <string name="redbull" translatable="false">Redbull</string>
    <string name="limonade" translatable="false">Limonade</string>
    <string name="schwheppes" translatable="false">Schweppes</string>
    <string name="canada_dry" translatable="false">Canada-Dry</string>
    <string name="pizza" translatable="false">Pizza</string>
    <string name="poulet">Chicken</string>
    <string name="brownie">Brownie</string>
    <string name="bonbon">Candies</string>
    <string name="salami">Salami</string>
    <string name="barbuc_chips">BBQ chips</string>
    <string name="paysanne_chips">Farming Chips</string>
    <string name="nameDrink">Name</string>
    <string name="choose">Choose</string>
    <string name="quantity">Quantity</string>
    <string-array name="quantityNumbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="address">Address : </string>

    <string name="aboutUs">About Us</string>
    <string name="aboutUsText">Application created for the CourseWork of Mobile Application Development, module of Napier University \n \nCreated by Lisa Duterte during her trimester abroad in this university \n \n Janvier-Mai 2020</string>

    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="dialogue_message_unsubscribe">Are you sure that you want to quite our app?</string>

    <string name="foodTitle"><u>Foods :</u></string>
    <string name="friendTitle"><u>Friends :</u></string>
    <string name="locationTitle"><u>Location :</u></string>
    <string name="dateTitle" translatable="false"><u>Date :</u></string>
    <string name="conversationTitle" translatable="false"><u>Conversation :</u></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="progressWelcome">Loading Data</string>
    <string name="save">Save</string>

    <string name="noActivity">No Activity to show</string>
    <string name="noContact">No Contact to show</string>
    <string name="contact_inserted">Contact Inserted</string>
    <string name="pseudoEqual">You can\'t add yourself</string>
    <string name="already_pseudo">Username already added</string>
    <string name="not_found_pseudo">Username not Found</string>
    <string name="fill_pseudo_field">You need to enter an username</string>
    <string name="no_contact_on_list">You don\'t have this contact on your Contact List</string>
    <string name="address_inserted">Address Inserted</string>
    <string name="error">Error</string>
    <string name="name_activity_exist">An activity has already this name</string>
    <string name="activity_inserted">Activity Inserted</string>


    <string name="game">Games</string>
    <string name="petitMeurtreGame" translatable="false">Petits meurtres et\nfaits divers</string>
    <string name="petitMeurtreGameInfo">The inspector is trying to find out the murderer by doing several interrogations. Each player has one minute to explain why he is not the murderer. He must say three words that are written in his book - all the innocents have the same three words they MUST use, but the murderer has three different words. The murderer is trying to pose as innocent by finding and using their three words, while the innocent players are trying to use the murderer\'s words to appear guilty.</string>

    <string name="mythoGame" translatable="false">Le Mito</string>
    <string name="mythoGameInfo">Cheating is forbidden.. except in this game! This game is about the first of all his cards by placing them down and cheating cleverly.</string>

    <string name="galerapagosGame" translatable="false">Galerapagos</string>
    <string name="galerapagosGameInfo">After their boat sank, a group of survivors found themselves on a deserted island. The setting is paradisaical but life is difficult. The water flows with the meager rainfall and the fish are made to eat.. rare. It\'s not certain that everyone survives this regime.. The only solution: build a large raft together. But we must not delay long because the clouds on the horizon indicate the imminent arrival of a dangerous hurricane. At the end of the game, the player(s) who manages to leave the island at time wins, unless no one survived, of course!</string>

    <string name="celestiaGame" translatable="false">Celestia</string>
    <string name="celestiaGameInfo">In Celestia, a revamped version of Cloud 9, you board an aircraft with a team of adventurers to perform many trips through the cities of Celestia and recover their wonderful treasures. Your journey will not be safe, but you will attempt to be the richest adventurer by collecting the most precious treasures!</string>

    <string name="diceForgeGame" translatable="false">Dice Forge</string>
    <string name="diceForgeGameInfo">Heroes, stand ready! The gods are offering a seat in heaven to whichever hero defeats their rivals. Your courage and wits will be your most precious allies as you use divine dice to gather resources along the road to victory. Your divine dice are exceptional, with removable faces! Customize your dice to make them more powerful as the game progresses. Sacrifice gold to the gods to obtain enhanced die faces. Upgrade your dice to produce the resources you need. Overcome ordeals concocted by the gods to grow in glory and earn rewards. Skillfully manage the luck of the dice and take charge of your destiny. Only the greatest will ascend to the heavens!</string>

    <string name="sixQuiPrendGame" translatable="false">6 Qui Prend</string>
    <string name="sixQuiPrendGameInfo">In "6 qui prend"!, a.k.a. Category 5 and many other names, you want to score as few points as possible. To play the game, you shuffle the 104 number cards, lay out four cards face-up to start the four rows, then deal ten cards to each player. Each turn, players simultaneously choose and reveal a card from their hand, then add the cards to the rows, with cards being placed in ascending order based on their number; specifically, each card is placed in the row that ends with the highest number that\'s below the card\'s number. When the sixth card is placed in a row, the owner of that card claims the other five cards and the sixth card becomes the first card in a new row.</string>

    <string name="unoGame" translatable="false">Uno</string>
    <string name="unoGameInfo">Uno\'s goal is to get rid of all his cards. To win, you will have to score 500 points or vice versa, i.e. be the one with the least points when one of the players exceeds 500 points.</string>
    <string name="drinkTitle"><u>Drinks :</u></string>
    <string name="wrongPassword">You have not entered a good password (8 characters: 1 lower, 1 Upper case and 1 number)</string>
    <string name="socca_chips">Socca chips</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_about_us" translatable="false">Map</string>
    <string name="title_activity_view_info" translatable="false">Map</string>

    <string name="messageToolBar" translatable="false">Conversation</string>
    <string name="dateToolBar" translatable="false">Date</string>
    <string name="friendToolBar">Friends</string>
    <string name="foodToolBar">Food</string>
    <string name="drinkToolBar">Drink</string>
    <string name="locationToolBar">Location</string>
    <string name="seeLocation">See Location</string>
    <string name="location_not_found">"Location not found ... Enter a good Location "</string>
    <string name="enter_location">Please enter any location</string>
    <string name="location_denied">Permission Location Denied...</string>
    <string name="current_location">your Current Location</string>
    <string name="sendText">Type a message...</string>

</resources>
