<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tileLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationTitle"
            android:textSize="30sp"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.gms.maps.MapView
        android:id="@+id/mapLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tileLocation"
        android:layout_above="@+id/updateBtn"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/seeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeLocation"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"/>

        <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:visibility="visible"/>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_answer"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="230dp"/>

    </RelativeLayout>

</FrameLayout>