<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.02"
        />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/name"
            android:layout_alignTop="@id/name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="27sp"/>

        <TextView
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/name"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/edit_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/surname"
            android:layout_alignTop="@id/surname"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="27sp"/>

        <TextView
            android:id="@+id/pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pseudo"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/surname"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/edit_pseudo"
            android:textSize="27sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pseudo"
            android:layout_alignTop="@id/pseudo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pseudo"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/edit_email"
            android:textSize="27sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/email"
            android:layout_alignTop="@id/email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_unsubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribe"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_unsubscribe"/>

</androidx.constraintlayout.widget.ConstraintLayout>