<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">


    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/activityName"
        android:layout_marginTop="20dp"/>
    <ListView
        android:id="@+id/ListViewFood"
        android:layout_width="190dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/food"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>
    <Button
        android:id="@+id/foodUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_answer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ListViewFood"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drinkTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/activityName"
        android:layout_marginTop="20dp"/>
    <ListView
        android:id="@+id/ListViewDrink"
        android:layout_width="190dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/drink"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/drink" />
    <Button
        android:id="@+id/drinkUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_answer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/ListViewDrink"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/foodUpdate"
        app:layout_constraintBottom_toBottomOf="@id/location"
        android:layout_marginTop="20dp"/>
    <ListView
        android:id="@+id/ListViewFriend"
        android:layout_width="190dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/friend"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>
    <Button
        android:id="@+id/friendUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_answer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ListViewFriend"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/drinkUpdate"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/locationAddress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/locationTitle"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/locationUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_answer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/locationAddress"
        android:layout_marginTop="10dp"/>



    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/locationUpdate"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/dateEnter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/dateUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_answer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="220dp"
        app:layout_constraintTop_toBottomOf="@+id/dateEnter"
        android:layout_marginTop="10dp"/>





    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>